--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.9"
 django = "^4.2.3"
 psycopg2-binary = "^2.9.6"
+openai = "^1.20.0"
+django-ninja = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
